# DataFlow-CV

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLUADE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  specs_for_label.md
.github/workflows/: python-publish.yml
assets/test_data/det/coco/: annotations.json
assets/test_data/det/coco/conversion_test/: original.json  rle.json
assets/test_data/det/labelme/: image1.json  image2.json
assets/test_data/seg/coco/: annotations-rle.json  annotations.json  annotations_rle_output.json
assets/test_data/seg/labelme/: image1.json  image2.json
assets/test_data/seg/yolo/output/: image1.txt  image2.txt
dataflow/: __init__.py  cli.py  config.py
dataflow/cli/: __init__.py  exceptions.py  main.py  models.py
dataflow/cli/commands/: __init__.py  convert.py  utils.py  visualize.py
dataflow/convert/: __init__.py  base.py  batch.py  cli.py  coco_and_labelme.py  coco_and_yolo.py  coco_to_labelme.py  coco_to_yolo.py  config.py  labelme_and_yolo.py  labelme_to_coco.py  labelme_to_yolo.py  rle_converter.py  utils.py  yolo_and_coco.py  yolo_and_labelme.py  yolo_to_coco.py  yolo_to_labelme.py
dataflow/label/: __init__.py  base.py  coco.py  coco_handler.py  labelme.py  labelme_handler.py  models.py  utils.py  yolo.py  yolo_handler.py
dataflow/util/: __init__.py  file_util.py  logging_util.py
dataflow/visualize/: __init__.py  base.py  batch.py  cli.py  coco.py  coco_vis.py  coco_visualizer.py  config.py  generic.py  labelme.py  labelme_vis.py  labelme_visualizer.py  utils.py  yolo.py  yolo_vis.py  yolo_visualizer.py
dataflow2/label/: __init__.py  base.py
dataflow2/util/: __init__.py  file_util.py  logging_util.py
docs/: README.md  coco.md  labelme.md  yolo.md
docs/specs/: specs_for_0_util.md  specs_for_1_label.md  specs_for_2_visualize.md  specs_for_3_convert.md  specs_for_4_cli.md  specs_for_cli.md  specs_for_convert.md  specs_for_label.md  specs_for_logging.md  specs_for_visualize.md
docs/superpowers/specs/: 2026-03-20-dataflow2-module-design.md
examples/convert/: basic_convert.py  batch_convert.py
examples/visualize/: basic_visualize.py
samples/: __init__.py  example_usage.py  template.py
samples/api/convert/: api_coco_to_labelme.py  api_coco_to_yolo.py  api_labelme_to_coco.py  api_labelme_to_yolo.py  api_yolo_to_coco.py  api_yolo_to_labelme.py
samples/api/visualize/: api_coco.py  api_labelme.py  api_yolo.py
samples/cli/: __init__.py  convert_demo.py  full_cli_demo.py  visualize_demo.py
samples/cli/convert/: cli_coco_to_labelme.py  cli_coco_to_yolo.py  cli_labelme_to_coco.py  cli_labelme_to_yolo.py  cli_yolo_to_coco.py  cli_yolo_to_labelme.py
samples/cli/visualize/: cli_coco.py  cli_labelme.py  cli_yolo.py
samples/convert/: __init__.py  coco_to_labelme_demo.py  coco_to_yolo_demo.py  full_conversion_demo.py  labelme_to_coco_demo.py  labelme_to_yolo_demo.py  yolo_to_coco_demo.py  yolo_to_labelme_demo.py
samples/convert/output/coco_to_yolo/labels/: 1.txt
samples/convert/output/labelme_to_coco/: annotations.json
samples/convert/output/labelme_to_yolo/labels/: image2.txt
samples/convert/output/yolo_to_coco/: annotations.json
samples/convert/output/yolo_to_labelme/: image1.json  image2.json
samples/label/: __init__.py  coco_demo.py  labelme_demo.py  lossless_demo.py  yolo_demo.py
samples/util/: __init__.py  file_util_demo.py  logging_util_demo.py
samples/visualize/: __init__.py  coco_demo.py  labelme_demo.py  yolo_demo.py
tests/: __init__.py  run_tests.py  test_cli.py  test_config.py  test_init.py
tests/cli/: __init__.py  test_cli.py  test_convert.py  test_integration.py  test_main.py  test_utils.py  test_visualize.py
tests/convert/: __init__.py  test_base.py  test_coco_and_labelme.py  test_coco_to_labelme.py  test_coco_to_yolo.py  test_convert.py  test_integration.py  test_labelme_and_yolo.py  test_labelme_to_coco.py  test_labelme_to_yolo.py  test_rle_converter.py  test_utils.py  test_yolo_and_coco.py  test_yolo_to_coco.py  test_yolo_to_labelme.py
tests/dataflow2/: test_base_handler.py  test_file_util.py  test_logging_util.py
tests/label/: __init__.py  test_base.py  test_coco.py  test_coco_handler.py  test_labelme.py  test_labelme_handler.py  test_lossless.py  test_yolo.py  test_yolo_handler.py
tests/util/: test_file_util.py  test_logging_util.py
tests/visualize/: __init__.py  test_base.py  test_coco.py  test_coco_visualizer.py  test_generic.py  test_labelme.py  test_labelme_visualizer.py  test_visualize.py  test_yolo.py  test_yolo_visualizer.py
