[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataflow-cv"
version = "0.5.0"
description = "A data processing library for computer vision datasets"
readme = "README.md"
authors = [
    {name = "DataFlow Team"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["computer-vision", "dataset", "conversion", "visualization", "coco", "yolo", "labelme"]
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.6.0.66",
    "Pillow>=8.0.0",
    "click>=7.0.0",
]
requires-python = ">=3.8"

[project.scripts]
dataflow = "dataflow.cli:main"
dataflow-cv = "dataflow.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dataflow*"]
exclude = ["tests*", "examples*"]