[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataflow-cv"
version = "0.1.0"
description = "A computer vision dataset processing library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DataFlow-CV Team", email = "example@example.com"}
]
keywords = ["computer-vision", "dataset", "annotation", "label", "labelme", "yolo", "coco"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.6.0.66",
    "click>=7.0.0",
]

[project.optional-dependencies]
coco = ["pycocotools>=2.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pylint>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
"Bug Reports" = "https://github.com/zjykzj/DataFlow-CV/issues"
"Source" = "https://github.com/zjykzj/DataFlow-CV"

[project.scripts]
dataflow-cv = "dataflow.cli.main:cli"

[tool.setuptools]
include-package-data = true
zip-safe = false
packages = {find = {where = ["."], include = ["dataflow", "dataflow.*"]}}

[tool.setuptools.package-data]
"*" = ["*.txt", "*.json", "*.md"]